# RISC-K-dev

./: .clang-format  .gitignore  README.md  make_all.sh  mnhimonic.md  setup.sh
book/: 1_CPU.md  2_Emu.md  README.md
rk16/: README.md  rkcpu.v
rk16/74ic/: IC_7400.v  IC_7400_tb.v  IC_7400_tb.vcd  IC_7400_tb.vvp  Makefile
rk16/verilog/: .svlint.toml  Makefile  fixhex.py  rom.hex  top.sv  top_tb.sv
rkarch/: README.md  arch.cpp  arch.hpp  mnemonics.ts
rkasm/: .gitignore  CMakeLists.txt  Makefile  README.md  code.cpp  code.hpp  imm.cpp  imm.hpp  isa.hpp  label.cpp  label.hpp  label_def.cpp  label_def.hpp  label_table.cpp  label_table.hpp  line.cpp  line.hpp  main.cpp  operation.cpp  operation.hpp  reader.cpp  reader.hpp  rkasm.cpp  test.rk  test.sh  utils.cpp  utils.hpp
rkasm-rs/: Cargo.toml  README.md
rkasm-rs/src/: main.rs  parser.rs
rkasm/class/: imm.cpp  imm.hpp  label.cpp  label.hpp  line.cpp  line.hpp  operation.cpp  operation.hpp
rkasm/src/: main.cpp
rkasm/src/arch/: README.md  arch.hpp  format.hpp  isa.hpp  utils.cpp  utils.hpp
rkasm/src/class/: comment.hpp  imm.cpp  imm.hpp  label.cpp  label.hpp  line.cpp  line.hpp  operation.cpp  operation.hpp
rkasm/src/func/: pprint.cpp
rkasm/src/objects/: asmline.cpp  asmline.hpp  comment.hpp  imm.hpp  label.cpp  label.hpp  objects.hpp  operation.hpp
rkasm/src/objects/asmline/: asmline.cpp  asmline.hpp
rkasm/src/objects/asmline/imm/: imm.cpp  imm.hpp
rkasm/src/objects/asmline/instruction/: instruction.cpp  instruction.hpp
rkasm/src/objects/asmline/label/: label.cpp  label.hpp
rkasm/src/print/: format.cpp  pretty.cpp
rkasm/src/utils/: args.hpp  error.cpp  error.hpp  print.cpp  print.hpp  stoi.cpp  stoi.hpp  stoios.cpp  stoios.hpp  string.cpp  string.hpp  utils.hpp
rkasm/test/: err.rk  ok.rk
rkasm/utils/: args.cpp  args.hpp  error.hpp
rkasm_deno/: deno.json  error.ts  index.ts  main.ts  mnemonics.ts  path.ts  print.ts  test.rk  type.ts
rkasm_deno/test/: 1_undefined_mnemonic.rk  2_argument_required.rk  3_invalid_register_name.rk  4_undefined_label.rk
rkcc/: CMakeLists.txt  Diary.md  README.md  asmgen.cpp  asmgen.hpp  ast.cpp  ast.hpp  ast_print.cpp  clang.ebnf  code.cpp  code.hpp  dfs.cpp  dfs.hpp  gen.cpp  gen.hpp  main.cpp  rkcc.cpp  run.sh  symbol.cpp  symbol.hpp  symbols.cpp  symbols.hpp  test  test.cyy  test.sh  token.cpp  token.hpp  type.cpp  type.hpp  utils.cpp  utils.hpp
rkcc/doc/: clang.bnf  ebnf_edit.ebnf
rkcc/test/: run.sh  test.cpp  test.cyy  test.rk  test1.tc  test2.c  test2.tc  test3.c  test3.tc  test4.c  test4.tc
rkdbg/: RKDBG.md
rkemu/: CMakeLists.txt  Makefile  README.md  breakPoint.cpp  breakPoint.hpp  cpu.cpp  cpu.hpp  debug.cpp  debug.hpp  isa.hpp  main.cpp  model.cpp  model.hpp  rkemu.cpp  utils.cpp  utils.hpp
rkemu_deno/: deno.json  index.ts  main.ts  model.ts  utils.ts
rkisa/: README.md  isa.cpp  isa.hpp  mnemonics.ts  rkisa.cpp  rkisa.hpp
rkrtos/: 0_intr.rk  1_os.rk  2_print.rk  README.md  lib.rk  main.dbg  main.dump  main.intp  main.intr  main.rk  make.sh  run.sh
rkrtos/00_task_switch/: a.rk  main.dump  main.intr  main.rk  run.sh
rkrtos/01_timeslice/: a.rk  main.dump  main.intr  main.rk  run.sh
sample/: README.md
sample/00_AsmTest/: error_noarg.rk  hoge  main.rk
sample/00_error/: Makefile  label.rk  main.rk
sample/00_operation/: main.rk  run.sh
sample/00_test/: Makefile  error_noopc.rk  (+3 more)
test/: README.md
utils/: utils.cpp  utils.hpp
(+75 files in other folders)
